--- a/views/blocks/aboutus.ejs
+++ b/views/blocks/aboutus.ejs
@@ -1,5 +1,5 @@
 <div id="about-us-box" class="row">
-    <div class="col-0 col-lg-1 col-xl-2"></div>
+    <div class="offset-lg-1 offset-xl-2"></div>
     <div class="col-12 col-lg-10 col-xl-8">
         <h3>About Us</h3>
         <p>Pixel Pow is an educational resource that makes the perfect sidekick for graphic design students &amp; faculty who want to incorporate comic books into their curriculums &amp; research.</p>
@@ -7,5 +7,4 @@
         <p>Give your work the superpowers it deserves with Pixel Pow!</p>
         <div class="yellow-bar"></div>
     </div>
-    <div class="col-0 col-lg-1 col-xl-2"></div>
 </div>
