--- a/views/blocks/header.ejs
+++ b/views/blocks/header.ejs
@@ -1,10 +1,10 @@
 <!-- Top Nav -->
 <div class="row" id="top-nav">
-    <div class="col-0 col-sm-1 col-xl-2"></div>
-    <div class="col-12 col-sm-10 col-xl-8">
+        <div class="offset-lg-1 offset-xl-2"></div>
+        <div class="col-12 col-lg-10 col-xl-8">
         <div class="row">
             <div id="donate-btn-box" class="col-sm-3">
-                <a href="#">
+                <a href="#!">
                     <div id="donate-btn">Donate</div>
                 </a>
             </div>
@@ -12,12 +12,12 @@
             <div class="col-sm-3">
                 <div id="social-icons">
                     <div id="fb-icon" class="social-icon-box">
-                        <a href="#">
+                        <a href="#!">
                             <img class="social-icon" src="/img/fb-icon.png" alt="PixelPOW on Facebook">
                         </a>
                     </div>
                     <div id="ig-icon" class="social-icon-box">
-                        <a href="#">
+                        <a href="#!">
                             <img class="social-icon" src="/img/ig-icon.png" alt="PixelPOW on Instagram">
                         </a>
                     </div>
@@ -25,11 +25,10 @@
             </div>
         </div>
     </div>
-    <div class="col-0 col-sm-1 col-xl-2"></div>
 </div>
 <!-- Nav Menu -->
 <div class="row" id="nav-menu">
-    <div class="col-0 col-lg-1 col-xl-2"></div>
+    <div class="offset-lg-1 offset-xl-2"></div>
     <div class="col-12 col-lg-10 col-xl-8" id="main-header">
         <div id="site-logo">
             <a href="/">
@@ -38,11 +37,11 @@
         </div>
         <!-- Desktop Menu -->
         <div id="menu-links-box">
-                <div class="menu-link"><a href="#">Home</a></div>
-                <div class="menu-link"><a href="#">About Us</a></div>
-                <div class="menu-link"><a href="#">Workshops</a></div>
-                <div class="menu-link"><a href="#">Testimonials</a></div>
-                <div class="menu-link"><a href="#">Contact</a></div>
+                <div class="menu-link"><a href="#!">Home</a></div>
+                <div class="menu-link"><a href="#!">About Us</a></div>
+                <div class="menu-link"><a href="#!">Workshops</a></div>
+                <div class="menu-link"><a href="#!">Testimonials</a></div>
+                <div class="menu-link"><a href="#!">Contact</a></div>
         </div>
         <!-- Mobile Popout Nav -->
         <div id="menu-icon" class="d-lg-none">
@@ -53,26 +52,25 @@
             <div id="menu-logo" class="menu-popout-link">
                 <img src="/img/pixelpow-logo.png" alt="PixelPOW logo">
             </div>
-            <a href="#">
+            <a href="#!">
                 <div class="menu-popout-link">Home</div>
             </a>
-            <a href="#">
+            <a href="#!">
                 <div class="menu-popout-link">About Us</div>
             </a>
-            <a href="#">
+            <a href="#!">
                 <div class="menu-popout-link">Workshops</div>
             </a>
-            <a href="#">
+            <a href="#!">
                 <div class="menu-popout-link">Testimonials</div>
-            <a href="#">
+            <a href="#!">
                 <div class="menu-popout-link">Contact</div>
             </a>
-            <a href="#">
+            <a href="#!">
                 <div class="menu-popout-link">Donate</div>
             </a>
         </div>
         <div id="site-dim"></div>
     </div>
-    <div class="col-0 col-lg-1 col-xl-2"></div>
 </div>
 <!-- Sticky Nav -->
