--- a/views/blocks/issue1.ejs
+++ b/views/blocks/issue1.ejs
@@ -7,7 +7,7 @@
             <p class="in-this-issue">IN THIS ISSUE...</p>
             <p class="issue-details">You'll start your adventure as a graphic design hero! Learn the basic skills you'll need to do battle with any design challenge that comes your way.</p>
             <div class="white-bar"></div>
-            <a href="#"><button class="download-btn">Download</button></a>
+            <a href="#!"><button class="download-btn">Download</button></a>
             <div class="issue-stats-box">
                 <div class="issue-stat issue-stat-right">
                     <h4>2hrs</h4>
