--- a/views/blocks/issue3.ejs
+++ b/views/blocks/issue3.ejs
@@ -8,7 +8,7 @@
             <p class="in-this-issue">IN THIS ISSUE...</p>
             <p class="issue-details">You’ll master the secret weapons you need to become SUPER DESIGNER. Using six comic-themed activities, you’ll explore some of the most important and powerful tools in both Adobe Photoshop &amp; Illustrator.</p>
             <div class="white-bar"></div>
-            <a href="#"><button class="download-btn">Download</button></a>
+            <a href="#!"><button class="download-btn">Download</button></a>
             <div class="issue-stats-box">
                 <div class="issue-stat issue-stat-right">
                     <h4>2.5hrs</h4>
