--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Facebook -->
-    <meta property="og:site_name" content="Pixel Pow">
+    <meta property="og:site_name" content="PixelPOW">
     <meta property="og:url" content="http://www.pixelpow.com">
     <meta property="og:title" content='PixelPOW'>
     <meta property="og:description" content="Pixel Pow is an educational resource that makes the perfect sidekick for graphic design students &amp; faculty who want to incorporate comic books into their curriculums &amp; research.">
@@ -42,10 +42,13 @@
         <!-- Testimonials -->
         <%- include('blocks/testimonials') -%>
         <!-- School Clients -->
+        <%- include('blocks/clients') -%>
         <!-- Newsletter Signup -->
+        <%- include('blocks/newsletter') -%>
     </main>
     <footer>
         <!-- Footer -->
+        <%- include('blocks/footer') -%>
     </footer>
 </body>
 </html>
