--- a/views/blocks/header.ejs
+++ b/views/blocks/header.ejs
@@ -1,5 +1,8 @@
+<!-- Sticky Nav Space -->
+<div id="sticky-nav"></div>
 <!-- Top Nav -->
-<div class="row" id="top-nav">
+<div id="nav-menu-box">
+    <div class="row" id="top-nav">
         <div class="offset-lg-1 offset-xl-2"></div>
         <div class="col-12 col-lg-10 col-xl-8">
         <div class="row">
@@ -24,53 +27,53 @@
                 </div>
             </div>
         </div>
+        </div>
     </div>
-</div>
-<!-- Nav Menu -->
-<div class="row" id="nav-menu">
-    <div class="offset-lg-1 offset-xl-2"></div>
-    <div class="col-12 col-lg-10 col-xl-8" id="main-header">
-        <div id="site-logo">
-            <a href="/">
-                <img src="/img/pixelpow-logo.png" alt="PixelPOW logo">
-            </a>
-        </div>
-        <!-- Desktop Menu -->
-        <div id="menu-links-box">
-                <div class="menu-link"><a href="#!">Home</a></div>
-                <div class="menu-link"><a href="#!">About Us</a></div>
-                <div class="menu-link"><a href="#!">Workshops</a></div>
-                <div class="menu-link"><a href="#!">Testimonials</a></div>
-                <div class="menu-link"><a href="#!">Contact</a></div>
-        </div>
-        <!-- Mobile Popout Nav -->
-        <div id="menu-icon" class="d-lg-none">
-            <img id="menu-icon-img" src="/img/menu-icon.png" alt="menu icon">
-        </div>
-        <div id="menu-popout">
-            <div id="menu-x">X</div>
-            <div id="menu-logo" class="menu-popout-link">
-                <img src="/img/pixelpow-logo.png" alt="PixelPOW logo">
+    <!-- Nav Menu -->
+    <div class="row" id="nav-menu">
+        <div class="offset-lg-1 offset-xl-2"></div>
+        <div class="col-12 col-lg-10 col-xl-8" id="main-header">
+            <div id="site-logo">
+                <a href="/">
+                    <img src="/img/pixelpow-logo.png" alt="PixelPOW logo">
+                </a>
             </div>
-            <a href="#!">
-                <div class="menu-popout-link">Home</div>
-            </a>
-            <a href="#!">
-                <div class="menu-popout-link">About Us</div>
-            </a>
-            <a href="#!">
-                <div class="menu-popout-link">Workshops</div>
-            </a>
-            <a href="#!">
-                <div class="menu-popout-link">Testimonials</div>
-            <a href="#!">
-                <div class="menu-popout-link">Contact</div>
-            </a>
-            <a href="#!">
-                <div class="menu-popout-link">Donate</div>
-            </a>
+            <!-- Desktop Menu -->
+            <div id="menu-links-box">
+                    <div class="menu-link"><a href="#!">Home</a></div>
+                    <div class="menu-link"><a href="#!">About Us</a></div>
+                    <div class="menu-link"><a href="#!">Workshops</a></div>
+                    <div class="menu-link"><a href="#!">Testimonials</a></div>
+                    <div class="menu-link"><a href="#!">Contact</a></div>
+            </div>
+            <!-- Mobile Popout Nav -->
+            <div id="menu-icon" class="d-lg-none">
+                <img id="menu-icon-img" src="/img/menu-icon.png" alt="menu icon">
+            </div>
+            <div id="menu-popout">
+                <div id="menu-x">X</div>
+                <div id="menu-logo" class="menu-popout-link">
+                    <img src="/img/pixelpow-logo.png" alt="PixelPOW logo">
+                </div>
+                <a href="#!">
+                    <div class="menu-popout-link">Home</div>
+                </a>
+                <a href="#!">
+                    <div class="menu-popout-link">About Us</div>
+                </a>
+                <a href="#!">
+                    <div class="menu-popout-link">Workshops</div>
+                </a>
+                <a href="#!">
+                    <div class="menu-popout-link">Testimonials</div>
+                <a href="#!">
+                    <div class="menu-popout-link">Contact</div>
+                </a>
+                <a href="#!">
+                    <div class="menu-popout-link">Donate</div>
+                </a>
+            </div>
+            <div id="site-dim"></div>
         </div>
-        <div id="site-dim"></div>
     </div>
 </div>
-<!-- Sticky Nav -->
