--- a/views/blocks/aboutus.ejs
+++ b/views/blocks/aboutus.ejs
@@ -1,3 +1,4 @@
+<a class="anchor" id="about-anchor"></a>
 <div id="about-us-box" class="row">
     <div class="offset-lg-1 offset-xl-2"></div>
     <div class="col-12 col-lg-10 col-xl-8">
