--- a/views/blocks/header.ejs
+++ b/views/blocks/header.ejs
@@ -14,12 +14,12 @@
             <div class="col-sm-6"></div>
             <div class="col-sm-3">
                 <div id="social-icons">
-                    <div id="fb-icon" class="social-icon-box">
+                    <div class="fb-icon social-icon-box">
                         <a href="#!">
                             <img class="social-icon" src="/img/fb-icon.png" alt="PixelPOW on Facebook">
                         </a>
                     </div>
-                    <div id="ig-icon" class="social-icon-box">
+                    <div class="ig-icon social-icon-box">
                         <a href="#!">
                             <img class="social-icon" src="/img/ig-icon.png" alt="PixelPOW on Instagram">
                         </a>
@@ -40,11 +40,11 @@
             </div>
             <!-- Desktop Menu -->
             <div id="menu-links-box">
-                    <div class="menu-link"><a href="#!">Home</a></div>
-                    <div class="menu-link"><a href="#!">About Us</a></div>
-                    <div class="menu-link"><a href="#!">Workshops</a></div>
-                    <div class="menu-link"><a href="#!">Testimonials</a></div>
-                    <div class="menu-link"><a href="#!">Contact</a></div>
+                <div class="menu-link"><a href="#sticky-nav">Home</a></div>
+                <div class="menu-link"><a href="#about-anchor">About Us</a></div>
+                <div class="menu-link"><a href="#issue-anchor">Workshops</a></div>
+                <div class="menu-link"><a href="#testimonial-anchor">Testimonials</a></div>
+                <div class="menu-link"><a href="mailto:david@davidayllon.com">Contact</a></div>
             </div>
             <!-- Mobile Popout Nav -->
             <div id="menu-icon" class="d-lg-none">
@@ -55,18 +55,19 @@
                 <div id="menu-logo" class="menu-popout-link">
                     <img src="/img/pixelpow-logo.png" alt="PixelPOW logo">
                 </div>
-                <a href="#!">
+                <a href="#sticky-nav">
                     <div class="menu-popout-link">Home</div>
                 </a>
-                <a href="#!">
+                <a href="#about-anchor">
                     <div class="menu-popout-link">About Us</div>
                 </a>
-                <a href="#!">
+                <a href="#issue-anchor">
                     <div class="menu-popout-link">Workshops</div>
                 </a>
-                <a href="#!">
+                <a href="#testimonial-anchor">
                     <div class="menu-popout-link">Testimonials</div>
-                <a href="#!">
+                </a>
+                <a href="mailto:david@davidayllon.com">
                     <div class="menu-popout-link">Contact</div>
                 </a>
                 <a href="#!">
