--- a/views/blocks/issue1.ejs
+++ b/views/blocks/issue1.ejs
@@ -1,3 +1,4 @@
+<a class="anchor" id="issue-anchor"></a>
 <div id="issue-1" class="issue-box">
     <div id="issue-1-img" class="issue-img"></div>
     <div id="issue-1-textarea" class="issue-textarea-right issue-textarea">
@@ -7,7 +8,9 @@
             <p class="in-this-issue">IN THIS ISSUE...</p>
             <p class="issue-details">You'll start your adventure as a graphic design hero! Learn the basic skills you'll need to do battle with any design challenge that comes your way.</p>
             <div class="white-bar"></div>
-            <a href="#!"><button class="download-btn">Download</button></a>
+            <form action="https://www.dropbox.com/sh/psfxxiqh0zy77jm/AAA_KqFO2hGv_VVavFkac9Uza?dl=0" method="get">
+                <button class="download-btn">Download</button>
+            </form>
             <div class="issue-stats-box">
                 <div class="issue-stat issue-stat-right">
                     <h4>2hrs</h4>
