--- a/views/blocks/issue2.ejs
+++ b/views/blocks/issue2.ejs
@@ -7,7 +7,9 @@
             <p class="in-this-issue">IN THIS ISSUE...</p>
             <p class="issue-details">You’ll embark on a secret mission to uncover the truth about typography and its applications in design. Learning and applying a glossary of term like base line, cap height, leading, kerning, and more—by the end of this adventure, you’ll fly away with all the tools you need to utilize typography as an expressive, integral part of  your designs.</p>
             <div class="white-bar"></div>
-            <a href="#!"><button class="download-btn">Download</button></a>
+            <form action="https://www.dropbox.com/sh/6sb5t16dffdergg/AAB0nqKMbKUd8yhDaVbUKZHma?dl=0" method="get">
+                <button class="download-btn">Download</button>
+            </form>
             <div class="issue-stats-box">
                 <div class="issue-stat issue-stat-left">
                     <h4>2hrs</h4>
