--- a/views/blocks/testimonials.ejs
+++ b/views/blocks/testimonials.ejs
@@ -1,4 +1,5 @@
 <!-- Testimonials Slider -->
+<a class="anchor" id="testimonial-anchor"></a>
 <div id="testimonial-box" class="row">
     <div class="offset-lg-1 offset-xl-2"></div>
     <div id="testimonial-0" class="col-12 col-lg-10 col-xl-8 testimonial-wrapper">
