--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <meta property="og:image:height" content="330">
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:100,300,500,700,900' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Varela%20Round rel='stylesheet'>
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
