--- a/views/blocks/issue3.ejs
+++ b/views/blocks/issue3.ejs
@@ -1,4 +1,3 @@
-<div>
 <div id="issue-3" class="issue-box">
     <div id="issue-3-img" class="issue-img"></div>
     <div id="issue-3-textarea" class="issue-textarea-right issue-textarea">
@@ -8,7 +7,9 @@
             <p class="in-this-issue">IN THIS ISSUE...</p>
             <p class="issue-details">You’ll master the secret weapons you need to become SUPER DESIGNER. Using six comic-themed activities, you’ll explore some of the most important and powerful tools in both Adobe Photoshop &amp; Illustrator.</p>
             <div class="white-bar"></div>
-            <a href="#!"><button class="download-btn">Download</button></a>
+            <form action="https://www.dropbox.com/sh/dgt47mwj4ewd97q/AAAxmM6gmJmjwmOTbf6ENfxda?dl=0" method="get">
+                <button class="download-btn">Download</button>
+            </form>
             <div class="issue-stats-box">
                 <div class="issue-stat issue-stat-right">
                     <h4>2.5hrs</h4>
@@ -28,5 +29,4 @@
             </div>
         </div>
     </div>
-</div>
 </div>
