--- a/views/blocks/newsletter.ejs
+++ b/views/blocks/newsletter.ejs
@@ -7,12 +7,12 @@
             <button id="newsletter-btn"></button>
         </form>
         <div id="footer-social-icons">
-            <div id="fb-icon" class="social-icon-box">
+            <div class="fb-icon social-icon-box">
                 <a href="#!">
                     <img class="social-icon" src="/img/fb-icon.png" alt="PixelPOW on Facebook">
                 </a>
             </div>
-            <div id="ig-icon" class="social-icon-box">
+            <div class="ig-icon social-icon-box">
                 <a href="#!">
                     <img class="social-icon" src="/img/ig-icon.png" alt="PixelPOW on Instagram">
                 </a>
